# aoc

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: 2023.yml
2022/: common.php
2022/01/: solution.php
2022/02/: solution.php
2022/03/: run.php  solution.php  test.php
2022/04/: run.php  solution.php  test.php
2022/05/: run.php  solution.php  test.php
2022/06/: run.php  solution.php  test.php
2022/07/: run.php  solution.php  test.php
2023/: .gitignore  Cargo.toml  LICENSE.md  README.md
2023-new/: Cargo.toml
2023-new/src/: main.rs
2023-old/: Cargo.toml
2023-old/day-template/: Cargo.toml
2023-old/day01/src/: lib.rs  part2.rs
2023-old/day02/: Cargo.toml
2023-old/day02/src/: aoc_error.rs  models.rs  part2.rs
2023-old/day03/: Cargo.toml  README.md
2023-old/day06/: Cargo.toml
2023-old/day07/: README.md
2023-old/day08/: Cargo.toml  README.md
2023-old/day10/: Cargo.toml
2023-old/day11/: Cargo.toml
2023-old/day11/src/: error.rs  lib.rs  part2.rs
2023-old/day14/: Cargo.toml
2023-old/day15/: Cargo.toml
2023-old/day16/: Cargo.toml
2023-old/day25/: Cargo.toml
2023/common/: Cargo.toml
2023/common/src/: lib.rs
2023/day-template/: Cargo.toml  README.md
2023/day-template/benches/: bench.rs
2023/day-template/src/: error.rs  lib.rs  part1.rs  part2.rs
2023/day01/: Cargo.toml
2023/day01/src/: lib.rs  part1.rs  part2.rs
2023/day02/: Cargo.toml
2023/day02/src/: aoc_error.rs  lib.rs  models.rs  parser.rs  part1.rs  part2.rs
2023/day03/: .gitignore  Cargo.toml  README.md  build.rs  day03.h  ffi.php
2023/day03/ffi/: autoload.php  composer.json
2023/day03/ffi/src/: Input.php  PartNumber.php  Presenter.php  UnimplementedException.php
2023/day03/ffi/src/Model/: Coord.php  EngineMap.php  Gear.php  PartNumber.php  Symbol.php
2023/day03/ffi/src/Parser/: FfiParser.php  ParserInterface.php  PhpParser.php
2023/day03/ffi/src/Solution/: Part1.php  Part2.php  SolutionInterface.php
2023/day03/src/: display.rs  ffi.rs  lib.rs  parser.rs  part1.rs  part2.rs
2023/day04/: Cargo.toml  README.md
2023/day04/src/: lib.rs  parser.rs  part1.rs  part2.rs
2023/day05/: Cargo.toml  README.md
2023/day05/src/: lib.rs  part1.rs  part2.rs
2023/day06/: Cargo.toml
2023/day06/src/: lib.rs  part1.rs  part2.rs
2023/day07/: Cargo.toml  README.md
2023/day07/benches/: bench.rs
2023/day07/src/: display.rs  lib.rs  part1.rs  part2.rs
2023/day07/src/models/: joker.rs  nojoker.rs
2023/day08/: README.md
2023/day08/src/: lib.rs  maths.rs  part1.rs  part2.rs
2023/day09/: Cargo.toml
2023/day09/benches/: bench.rs
2023/day09/src/: error.rs  lib.rs  part1.rs  part2.rs
2023/day10/: Cargo.toml  README.md
2023/day10/benches/: bench.rs
2023/day10/src/: debug.rs  error.rs  models.rs  part1.rs  part2.rs
2023/day11/: Cargo.toml
2023/day11/benches/: bench.rs
2023/day11/src/: debug.rs  display.rs  lib.rs  part1.rs  part2.rs
2023/day14/: Cargo.toml
2023/day14/benches/: bench.rs
2023/day14/src/: display.rs  error.rs  lib.rs  part2.rs
2023/day15/src/: error.rs  lib.rs  models.rs  parser.rs  part1.rs  part2.rs
2023/day16/: Cargo.toml
2023/day16/benches/: bench.rs
2023/day16/src/: error.rs  lib.rs  models.rs  part1.rs  part2.rs
2023/day16/src/models/: display.rs
2023/day17/: Cargo.toml  README.md
2023/day17/benches/: bench.rs
2023/day17/src/: error.rs  lib.rs  models.rs  part1.rs
2023/day17/src/models/: display.rs
2023/day25/benches/: bench.rs
2023/day25/src/: error.rs  parser.rs  part1.rs
2023/src/: day.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  main.rs
2024/: Cargo.toml
2024/src/: day-template.rs  day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  main.rs  nom.rs
2025/: .gitignore  Cargo.toml
2025/common/: Cargo.toml
2025/common/src/: grid.rs  input.rs  lib.rs  solution.rs
2025/day01/: Cargo.toml
2025/day01/benches/: default.rs
2025/day01/src/: lib.rs  main.rs  models.rs
2025/day02/: Cargo.toml
2025/day02/benches/: default.rs
2025/day02/src/: lib.rs  main.rs
2025/day03/: .gitignore  Cargo.toml
2025/day03/benches/: default.rs
2025/day03/src/: lib.rs  main.rs
2025/day04/: Cargo.toml
2025/day04/benches/: default.rs
2025/day04/src/: lib.rs  main.rs
2025/day05/: Cargo.toml
2025/day05/benches/: default.rs
2025/day05/src/: lib.rs  main.rs  parser.rs
2025/day06/: Cargo.toml
2025/day06/benches/: default.rs
2025/day06/src/: lib.rs  main.rs  parser.rs
common/: Cargo.toml
common/src/: app.rs  error.rs  lib.rs
(+39 files in other folders)
