[workspace]
resolver = "2"
members = ["day*"]

[workspace.dependencies]
glam = "0.24"
nom = "7.1"
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rstest = "0.18"
rstest_reuse = "0.6"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false