[package]
name = "aoc-2024"
version = "0.1.0"
authors = ["Zan Baldwin <hello@zanbaldwin.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
aoc-common = { path = "../common" }
clap = "4.5.21"
itertools = "0.13.0"
nom = "7.1.3"
humanize-duration = "0.0.6"

[dev-dependencies]
rstest = "0.23"
rstest_reuse = "0.7"
