[package]
name = "day06"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
nom = "^8"

[dev-dependencies]
rstest.workspace = true
divan.workspace = true

[[bench]]
name = "default"
harness = false

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
